Tue Feb 05 15:59:04 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/unittests/t0007.c:
	- improve SYBINT8 conversions testing

Mon Feb 04 08:49:58 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/convert.c: fix silly memory leak

Thu Jan 21 10:12:42 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/unittests/convert_error.c src/odbc/unittests/genparams.c:
	- more reuse

Tue Jan 29 15:28:32 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/unittests/array_out.c src/odbc/unittests/common.c:
	* src/odbc/unittests/common.h src/odbc/unittests/compute.c:
	* src/odbc/unittests/connect2.c src/odbc/unittests/const_params.c:
	* src/odbc/unittests/copydesc.c src/odbc/unittests/cursor1.c:
	* src/odbc/unittests/cursor2.c src/odbc/unittests/cursor3.c:
	* src/odbc/unittests/cursor4.c src/odbc/unittests/cursor5.c:
	* src/odbc/unittests/data.c src/odbc/unittests/date.c:
	* src/odbc/unittests/error.c src/odbc/unittests/funccall.c:
	* src/odbc/unittests/genparams.c src/odbc/unittests/getdata.c:
	* src/odbc/unittests/hidden.c src/odbc/unittests/lang_error.c:
	* src/odbc/unittests/moreandcount.c src/odbc/unittests/norowset.c:
	* src/odbc/unittests/params.c src/odbc/unittests/prepare_results.c:
	* src/odbc/unittests/print.c src/odbc/unittests/putdata.c:
	* src/odbc/unittests/raiserror.c src/odbc/unittests/rebindpar.c:
	* src/odbc/unittests/scroll.c src/odbc/unittests/t0001.c:
	* src/odbc/unittests/t0002.c src/odbc/unittests/t0003.c:
	* src/odbc/unittests/t0004.c src/odbc/unittests/tables.c:
	* src/odbc/unittests/test64.c src/odbc/unittests/timeout.c:
	* src/odbc/unittests/timeout2.c src/odbc/unittests/timeout4.c:
	* src/odbc/unittests/transaction.c src/odbc/unittests/typeinfo.c:
	* src/odbc/unittests/warning.c:
	- reuse reuse reuse!

Tue Jan 29 10:34:41 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/convert_tds2sql.c src/odbc/odbc.c src/odbc/odbc_util.c:
	* src/odbc/unittests/getdata.c: