@@ -1,3 +1,8 @@
+Wed Feb 06 09:27:10 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
+	* src/odbc/unittests/rpc.c src/odbc/unittests/cursor5.c:
+	* src/odbc/unittests/cursor4.c src/odbc/unittests/cursor3.c:
+	- use printf instead of fprintf(stdout...)
+
 Tue Feb 05 15:59:04 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
 	* src/tds/unittests/t0007.c:
 	- improve SYBINT8 conversions testing
@@ -139,4 +144,4 @@ Wed Jan  9 19:54:43 EST 2008	JK Lowden <jklowden@freetds.org>
 	* ChangeLog  truncated because of release
 	* ChangeLog-0.82 added because of release
 	
-$Id: ChangeLog,v 1.2483 2008/02/05 15:01:28 freddy77 Exp $
+$Id: ChangeLog,v 1.2484 2008/02/06 08:28:10 freddy77 Exp $
